--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --watch dev -e js"
+    "start": "nodemon --watch dev -e js dev/api.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/rudy750/blockhain.js#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.0",
     "nodemon": "^2.0.15",
     "sha256": "^0.2.0"
