--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.0",
     "nodemon": "^2.0.15",
+    "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "sha256": "^0.2.0",
     "uuid": "^8.3.2"
